<resources>
    <string name="app_name">Android1_Final_Project</string>
    <string name="score">"Score: "</string>
    <string name="meal">What meal are you taking?</string>
    <string name="meat_str">Meat</string>
    <string name="milk_str">Milk</string>
    <string name="vegetarian_str">Vegetarian</string>
    <string name="backery_str">Backery</string>
    <string name="breakfast_str">Breakfast</string>
    <string name="lunch_str">Lunch</string>
    <string name="rosh_hashana_str">Rosh Hashana</string>
    <string name="passover_str">Passover</string>
    <string name="custom_list_str">Custom</string>
    <string name="new_game">New Game</string>
    <string name="high_score">High Score</string>
    <string name="how_to_play">How to Play</string>
    <string name="settings">Settings</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="game_over">Game Over!</string>
    <string name="home_btn">Home</string>
    <string name="play_again">Play Again</string>
    <string name="champions">The Champions</string>
    <string name="winner_str1">Congratulations!</string>
    <string name="winner_str2">You\'ve made a new record!</string>
    <string name="save_score">Save Record</string>
    <string name="cancel_btn">Cancel</string>
    <string name="editext_hint">Enter your name</string>
    <string name="winner_str3">You won!</string>
    <string name="winner_str4">Want to break a record ?</string>
    <string name="difficulty1">Easy</string>
    <string name="difficulty2">Medium</string>
    <string name="difficulty3">Hard</string>
    <string name="save_btn">Save</string>
    <string name="select_difficulty">Difficulty</string>
    <string name="select_control">Control</string>
    <string name="control2">Touch</string>
    <string name="control1">Accelerometer</string>
    <string name="music_sound">Music and Sounds</string>
    <string name="reset_score">Reset Scores</string>
    <string name="reset_score_toast">Table of records has been reset!</string>
    <string name="record_saved_toast">The record is saved!</string>
    <string name="back_btn">Back</string>
    <string name="select_groceries">Select up to 8 groceries:</string>
    <string name="select">Select</string>
    <string name="quantity">quantity</string>
    <string name="play">Play</string>
    <string name="exit_dialog">Are you sure you\n  want to leave ?</string>
    <string name="resume_game">Continue</string>
    <string name="bonus">Bonus!!</string>
    <string name="collect_all">Collect All</string>

</resources>
