<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shape">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner_str1"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner_str2"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/name_et"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/editext_hint"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/save_score_btn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/save_score"
            android:textAllCaps="false"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/main_button_shape2"/>

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/cancel_btn"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:background="@drawable/main_button_shape2"/>

    </LinearLayout>


</LinearLayout>