<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shape">


    <TextView
        android:id="@+id/settings_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/kid"
        android:paddingHorizontal="5dp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/difficulty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_difficulty"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingHorizontal="5dp"
        android:fontFamily="@font/kid"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="22dp"/>


    <RadioGroup
        android:id="@+id/difficulty_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/easy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty1"
            android:checked="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/kid"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            />

        <RadioButton
            android:id="@+id/medium_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty2"
            android:checked="false"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/kid"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"/>

        <RadioButton
            android:id="@+id/hard_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty3"
            android:checked="false"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/kid"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="5dp"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/control_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="22dp"
        android:text="@string/select_control"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingHorizontal="5dp"
        android:fontFamily="@font/kid"
        android:textColor="@color/colorBlack"
        />

    <RadioGroup
        android:id="@+id/control_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/accelerometer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control1"
            android:checked="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/kid"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"/>

        <RadioButton
            android:id="@+id/touch_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control2"
            android:checked="false"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/kid"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/music_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="22dp"
        android:text="@string/music_sound"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingHorizontal="5dp"
        android:fontFamily="@font/kid"
        android:textColor="@color/colorBlack"
        />

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/music_checkBox"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:checked="true"/>

        <ImageView
            android:id="@+id/music_imgV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/music_enabled" />

        <CheckBox
            android:id="@+id/sounds_checkBox"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            />

        <ImageView
            android:id="@+id/sound_imgV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/sound_enabled"
            android:layout_gravity="center_vertical"
            />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        >

        <Button
            android:id="@+id/back_btn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/back_btn"
            android:textAllCaps="false"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/main_button_shape2"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:fontFamily="@font/kapow"
            />

        <Button
            android:id="@+id/reset_score_table"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/reset_score"
            android:textAllCaps="false"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/main_button_shape1"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:fontFamily="@font/kapow"
            />

    </LinearLayout>


</LinearLayout>