<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/level_select_activity_background3"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/productsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="25sp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:text="@string/meal"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginHorizontal="10dp"
                >


                <LinearLayout
                    android:id="@+id/milk_layout"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/milk_btn_shape"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/milk_tv"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:textSize="17sp"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:text="@string/milk_str"
                        />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/meat_layout"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/meat_btn_shape"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/meat_tv"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:textSize="17sp"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:text="@string/meat_str"
                        />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                >


                <LinearLayout
                    android:id="@+id/vegetarian_layout"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="4dp"
                    android:layout_toStartOf="@+id/backery_layout"
                    android:background="@drawable/vegetarian_btn_shape"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/vegetarian_tv"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:paddingEnd="7dp"
                        android:text="@string/vegetarian_str"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/backery_layout"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bakery_btn_shape"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/bakery_tv"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:textSize="17sp"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:text="@string/backery_str"
                        />

                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                >


                <LinearLayout
                    android:id="@+id/breakfast_layout"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/breakfast_btn_shape"
                    android:clickable="false">

                    <TextView
                        android:id="@+id/breakfast_tv"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:textSize="17sp"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:text="@string/breakfast_str"
                        />

                </LinearLayout>

                <ImageView
                    android:id="@+id/breakfast_lock"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/lock2"

                    />

                <LinearLayout
                    android:id="@+id/lunch_layout"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/lunch_btn_shape"
                    android:clickable="false">

                    <TextView
                        android:id="@+id/lunch_tv"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:textSize="17sp"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:text="@string/lunch_str"
                        />

                </LinearLayout>

                <ImageView
                    android:id="@+id/lunch_lock"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/lock2"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                >


                <LinearLayout
                    android:id="@+id/rosh_hashana_layout"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/rosh_hashana_btn_shape"
                    android:clickable="false">

                    <TextView
                        android:id="@+id/rosh_hashana_tv"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:paddingEnd="7dp"
                        android:textSize="17sp"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:text="@string/rosh_hashana_str"
                        />

                </LinearLayout>

                <ImageView
                    android:id="@+id/rosh_hashana_lock"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="4dp"
                    android:layout_toStartOf="@+id/passover_lock"
                    android:src="@drawable/lock2" />

                <LinearLayout
                    android:id="@+id/passover_layout"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/passover_btn_shape"
                    android:clickable="false">

                    <TextView
                        android:id="@+id/passover_tv"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:textSize="17sp"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:text="@string/passover_str"
                        />

                </LinearLayout>

                <ImageView
                    android:id="@+id/passover_lock"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/lock2"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"
                >


                <LinearLayout
                    android:id="@+id/custom_layout"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/custom_btn_shape"
                    android:clickable="false">

                    <TextView
                        android:id="@+id/custom_tv"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:textSize="17sp"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:text="@string/custom_list_str"
                        />

                </LinearLayout>

                <ImageView
                    android:id="@+id/custom_lock"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/lock2"
                    />


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>